[project]
name = "kagayaki-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tokenizers>=0.20.0",
    "torch==2.4.1+cu121",
    "torchaudio==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "transformers[ja,sentencepiece]>=4.45.1",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "setuptools>=70.0.0",
    "wheel>=0.44.0",
]
